# quantumshield-rofl-kyc

./: .gitignore  CORRECTIONS_SUMMARY.md  DEMO_RECORDING_SCRIPT_EN.md  HACKATHON_SUBMISSION.md  LICENSE  PREPARE_FOR_SUBMISSION.md  QUICK_START_DEMO.md  README.md  SUBMISSION_CHECKLIST.md  check_demo_ready_en.sh
quantum-shield-contracts/: .env.example  foundry.toml  register_rofl.sh
quantum-shield-contracts/script/: Deploy.s.sol  RegisterROFL.s.sol
quantum-shield-contracts/src/: KYCRegistry.sol
quantum-shield-frontend/: package-lock.json  package.json  test-kyber.html  test-kyber.js
quantum-shield-frontend/app/: layout.tsx  page.tsx  providers.tsx
quantum-shield-frontend/app/api/kyber-public-key/: route.ts
quantum-shield-frontend/app/api/rofl-verify/: route.ts
quantum-shield-frontend/lib/: chains.ts  contracts.ts  kyber.ts  wagmi.ts
rofl-kyc-oracle/: .env.example  Cargo.toml  check_rofl_address.js  start_rofl_server.sh
rofl-kyc-oracle/examples/: test_compatibility.rs
rofl-kyc-oracle/src/: chain_interface.rs  kyc_verifier.rs  lib.rs  pqc_module.rs  signature.rs
